added padding to all card titles and classname to score list

--- a/src/pages/Scores.css
+++ b/src/pages/Scores.css
@@ -36,9 +36,13 @@
   padding-top: 17px;
 }
 .score-title {
+  padding-top: 8px;
   color: var(--ion-text-color);
 }
 
 .score-card {
+  background-color: var(--ion-card-color);
+}
+.score-list {
   background-color: var(--ion-card-color);
 }
