--- a/src/pages/Watch.css
+++ b/src/pages/Watch.css
@@ -3,10 +3,13 @@
   padding-top: 0;
   align-items: flex-start;
   width: 100%;
-  height: 100%;
 }
 .watch-slide {
-  width: 40vh !important;
+  width: 40vh;
+  height: 100% !important;
+}
+.alsowatch-slide {
+  width: 32vh;
   height: 100% !important;
 }
 
@@ -23,17 +26,46 @@
   padding: 10px;
 }
 
+.small-image {
+  width: 200px; /* Adjust the width as needed */
+  height: 150px; /* Adjust the height as needed */
+  padding-left: 10px; /* Adjust the padding as needed */
+}
+
 .title,
 .subtitle {
+  text-decoration: none;
   text-align: left;
   margin-left: 10px; /* Adjust the margin as needed */
+  color: var(--ion-text-color);
 }
 
 .watch-title {
+  text-decoration: none;
   padding-top: 8px;
   color: var(--ion-text-color);
 }
 
-.alsoWatch-card {
+.Watch-card {
   background-color: var(--ion-card-color);
+}
+
+.small-title,
+.small-subtitle {
+  font-size: 1rem; /* Adjust the font size as needed */
+  margin-left: 5px; /* Adjust the margin as needed */
+  color: var(--ion-text-color);
+}
+
+.small-card {
+  height: 230px;
+  width: 230px;
+  padding: 10px; /* Adjust the padding as needed */
+  margin: 10px; /* Adjust the margin as needed */
+  border-radius: 5px; /* Adjust the border radius as needed */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adjust the box shadow as needed */
+}
+.watch-slide-anchor {
+  display: inline;
+  width: 180px !important;
 }
