added classnames to all anchor tags and removed link decoration

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -35,7 +35,7 @@ ion-item:hover {
   margin: 10px 0;
 }
 
-.headline-link {
+.home-anchor {
   padding-left: 15px;
   text-decoration: none;
   color: var(--ion-text-color);
