--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -15,7 +15,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-secondary-shade: #015796;
   --ion-color-secondary-tint: #1a73b3;
 
-  --ion-color-tertiary: #6030ff;
+  --ion-color-tertiary: #582de4;
   --ion-color-tertiary-rgb: 96, 48, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
