--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -78,3 +78,8 @@ ion-item:hover {
   margin-left: 8px;
   color: var(--ion-text-color);
 }
+.login-title {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: bold;
+}
