visual consitency edits

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -82,4 +82,5 @@ ion-item:hover {
   text-align: center;
   font-size: 4rem;
   font-weight: bold;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
