--- a/src/pages/Watch.css
+++ b/src/pages/Watch.css
@@ -43,15 +43,28 @@
   padding-top: 8px;
   color: var(--ion-text-color);
 }
-.username-overlay {
+.watch-card:hover {
+  background-color: black;
+  background-size: contain;
   width: auto;
-  height: 10px;
+  height: auto;
   position: absolute;
   z-index: 99;
   left: 10px;
-  top: 2%;
-  opacity: 1;
+  top: 4%;
+  opacity: 0.7;
+  color: #fff;
+}
+.username-overlay {
   background-color: black;
+  background-size: contain;
+  width: auto;
+  height: auto;
+  position: absolute;
+  z-index: 99;
+  left: 10px;
+  top: 4%;
+  opacity: 0.7;
   color: #fff;
 }
 .watch-card {
