--- a/src/pages/Watch.css
+++ b/src/pages/Watch.css
@@ -44,16 +44,11 @@
   color: var(--ion-text-color);
 }
 .watch-card:hover {
-  background-color: black;
-  background-size: contain;
-  width: auto;
-  height: auto;
+  background-color: var(--hover-background-color);
   position: absolute;
-  z-index: 99;
-  left: 10px;
+  left: 1rem;
+  right: 1rem;
   top: 4%;
-  opacity: 0.7;
-  color: #fff;
 }
 .username-overlay {
   background-color: black;
