--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -75,3 +75,8 @@ ion-item:hover {
   font-weight: bold;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+.bad-login {
+  color: red;
+  justify-content: center;
+  align-items: center;
+}
