--- a/src/pages/Schedule.css
+++ b/src/pages/Schedule.css
@@ -13,11 +13,14 @@
   flex: 1;
   text-align: center;
   color: var(--ion-text-color);
+  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+  font-weight: bold;
 }
 
 .vs {
   margin: 0 10px;
   color: var(--ion-text-color);
+  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 .schedule-card:hover {
   background-color: var(--hover-background-color);
@@ -52,4 +55,5 @@
   font-size: 0.8rem;
   text-align: center;
   color: var(--ion-text-color);
+  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
