--- a/src/pages/Scores.css
+++ b/src/pages/Scores.css
@@ -28,12 +28,15 @@
 .teamName {
   padding-bottom: 15px;
   padding-top: 17px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
 }
 
 .teamScore {
   margin-left: auto;
   padding-bottom: 15px;
   padding-top: 17px;
+  font-size: large;
+  font-family: monospace !important;
 }
 .score-title {
   padding-top: 8px;
